--- a/Style/style.css
+++ b/Style/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 body {
-    background-color: #3C3C5B;
+    background-color: #3C3C5B;;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -35,5 +35,5 @@ menu {
 }
 
 .background-button {
-    background-color: #605F8E;
+    background-color: #464567;
 }
