--- a/Style/style.css
+++ b/Style/style.css
@@ -37,3 +37,11 @@ menu {
 .background-button {
     background-color: #464567;
 }
+
+.menu-toggle {
+    display: none;
+  }
+  
+.menu-toggle.show {
+    display: block;
+  }  
